Se añade ruta de front end para restablecer contraseña[

--- a/templates/confirmAccount.html
+++ b/templates/confirmAccount.html
@@ -68,8 +68,8 @@
     
         <!-- Content -->
         <div class='content'>
-        <h1>¡Bienvenido! Verifica tu cuenta</h1>
-        <p style='text-align: justify;'>Gracias por registrarte con nosotros. Para completar el proceso de registro y activar tu cuenta, por favor, haz clic en el siguiente enlace de verificación:</p>
+        <h1>¡Bienvenido!</h1>
+        <p style='text-align: justify;'>Gracias por registrarte con nosotros. Para completar el proceso de registro y activar tu cuenta, por favor, haz clic en el siguiente enlace:</p>
         <p><a href='$url' style='text-decoration: underline; color: #1386e5; font-weight: bold'>$url</a></p>
         <p style='text-align: justify;'>Si no creaste esta cuenta, puedes ignorar este mensaje. Te recomendamos que no compartas este enlace con nadie. Si tienes alguna pregunta o necesitas asistencia, no dudes en ponerte en contacto con nosotros.</p>
         <a href='$url' class='button'>Verificar mi cuenta</a>
