--- a/templates/recoverPasswordTemplate.html
+++ b/templates/recoverPasswordTemplate.html
@@ -62,7 +62,7 @@
   <div class='container'>
     <!-- Header -->
     <div class='header'>
-      <img src='https://nextgendev.com.mx/Cryptography/logo.ico' alt='Logo'>
+      <img src='https://sisegplataform.online/uploads/siseg.png' alt='Logo'>
     </div>
     <!-- Content -->
     <div class='content'>
